# project/routes/teams.js
@@ -2,6 +2,8 @@ var express = require("express");
 var router = express.Router();
 const DButils = require("./utils/DButils");
 const players_utils = require("./utils/players_utils");
+const teams_utils = require("./utils/teams_utils");
+
 
 router.get("/teamFullDetails/:teamId", async (req, res, next) => {
   let team_details = [];
@@ -11,6 +13,18 @@ router.get("/teamFullDetails/:teamId", async (req, res, next) => {
     );
     //we should keep implementing team page.....
     res.send(team_details);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.get("/searchTeam/:teamName", async (req, res, next) => {
+  let team_info = [];
+  try {
+    const team_info = await teams_utils.getTeamDetails(
+      req.params.teamName
+    );
+    res.send(team_info);
   } catch (error) {
     next(error);
   }
